SERVER-53625 Fix slimOplogForGraphLookup to include if txn was aborted.